[package]
name = "viewgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-grants = "3.0.2"
actix-web-httpauth = "0.8.1"
actix-web = "4.3.1"
actix-cors = "0.6.4"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
serde_json = "1.0.107"
rand_core = { version = "0.6.4", features = ["std"] }
env_logger = "0.10.0"
dotenv = "0.15.0"
argon2 = "0.5.2"
uuid = { version = "1.4.1", features = ["serde"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.7"
tracing-subscriber = "0.3.17"
